<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@mipmap/fondoextras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seccionExtras">
    <TextView
        android:textStyle="bold"
        android:id="@+id/seccionExtra"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/registrarExtra"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"/>

    <EditText
        android:textStyle="bold"
        android:textColor="@color/red"
        android:padding="25dp"
        android:id="@+id/txtTipoExtra"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/extra"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        android:imeActionLabel="sig."/>

    <EditText
        android:textColor="@color/red"
        android:textStyle="bold"
        android:padding="25dp"
        android:id="@+id/txtCantidadExtra"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cantidadExtra"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        android:imeActionLabel="sig."/>

    <EditText
        android:textColor="@color/red"
        android:padding="25dp"
        android:textStyle="bold"
        android:id="@+id/txtFechaExtra"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/fechaExtra"
        android:imeOptions="actionNext"
        android:imeActionLabel="sig."
        android:textColorHint="@color/black"
        android:focusable="false"
        android:clickable="false"/>

    <EditText
        android:textColor="@color/red"
        android:textStyle="bold"
        android:padding="25dp"
        android:id="@+id/txtTotalExtra"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/totalExtras"
        android:imeOptions="actionDone"
        android:imeActionLabel="Listo"
        android:textColorHint="@color/black"/>

    <Button
    android:id="@+id/addRecyclerExtra"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_margin="20dp"
    android:backgroundTint="@color/black"
    android:text="@string/botonAggExtr"
    android:textColor="@color/white" />

    <Button
    android:id="@+id/showRecyclerExtra"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:layout_margin="20dp"
    android:backgroundTint="@color/black"
    android:text="@string/btnmostrarGastosTransp"
    android:textColor="@color/white" />
</LinearLayout>