<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@mipmap/fondoservicios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seccionServicios">
    <TextView
        android:id="@+id/seccionServicio"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="@string/registrarServicios"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/cyan"/>

    <EditText
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="25dp"
        android:id="@+id/txtTipoServicio"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/servicio"
        android:imeOptions="actionNext"
        android:textColorHint="@color/cyan"
        android:imeActionLabel="sig."/>

    <EditText
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="25dp"
        android:id="@+id/txtFechaServicio"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:clickable="false"
        android:focusable="false"
        android:inputType="date"
        android:hint="@string/fechaServicio"
        android:imeOptions="actionNext"
        android:imeActionLabel="sig."
        android:textColorHint="@color/cyan" />

    <EditText
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="25dp"
        android:id="@+id/txtTotalServicio"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/totalServicio"
        android:imeOptions="actionDone"
        android:imeActionLabel="Listo"
        android:textColorHint="@color/cyan"/>

    <Button
        android:id="@+id/addRecyclerServicio"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/botonAggTransp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/showRecyclerServicio"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/btnmostrarGastosTransp"
        android:textColor="@color/white" />

</LinearLayout>